# twofloat

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: build.yml  ci.yml  release.yml
scripts/: changelog.py
sollya/: arcsin.sollya  arctan.sollya  cos.sollya  exp.sollya  exp2.sollya  expm1.sollya  sin.sollya  tan.sollya
src/: arithmetic.rs  base.rs  consts.rs  convert.rs  format.rs  format_std.rs  functions.rs  iter.rs  lib.rs  math.rs  math_util.rs  num_integration.rs  ops_util.rs  serialization.rs  simba.rs  simba_integration.rs  string.rs  test_util.rs  twofloat.rs
src/functions/: explog.rs  fraction.rs  function_utils.rs  hyperbolic.rs  power.rs  sign.rs  trigonometry.rs
tests/: arithmetic_tests.rs  base_tests.rs  convert_tests.rs  explog_tests.rs  fraction_tests.rs  hyperbolic_tests.rs  num_tests.rs  power_tests.rs  serde_tests.rs  trigonometry_tests.rs
tests/common/: mod.rs
twofloat_macro/: Cargo.toml
twofloat_macro/src/: lib.rs
twofloat_macro/tests/: macro_tests.rs
