[package]
name = "twofloat"
version = "0.6.1"
authors = ["Andrew Tribick"]

keywords = ["float", "precision", "numerics", "floating-point", "arithmetic"]
categories = ["algorithms", "mathematics", "science"]
exclude = [".gitignore", "sollya", ".github"]
edition = "2018"

readme = "README.md"
license = "BSD-3-Clause"
description = "Double-double arithmetic functionality."
repository = "https://github.com/ajtribick/twofloat"

[package.metadata.docs.rs]
all-features = true

[lib]
name = "twofloat"
test = true

[features]
default = ["math_funcs"]
math_funcs = ["num-traits/std"]

[dependencies]
hexf = "0.2"
num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[target.'cfg(all(windows, target_env = "gnu"))'.dependencies]
libm = "0.2.6"

[dev-dependencies]
rand = "0.8"
serde_test = "1.0"
