[package]
name = "twofloat"
version = "0.8.2"
authors = ["Andrew Tribick", "Individual contributors"]
keywords = ["float", "precision", "numerics", "floating-point", "arithmetic"]
categories = ["algorithms", "mathematics", "science"]
exclude = [".github", ".gitignore", "ci-workdir", "sollya", "scripts"]
edition = "2018"
readme = "README.md"
license = "BSD-3-Clause"
description = "Double-double arithmetic functionality."
repository = "https://github.com/ajtribick/twofloat"

[package.metadata.docs.rs]
all-features = true

[lib]
name = "twofloat"
test = true

[features]
default = ["std", "math_funcs"]
math_funcs = []
std = []

[dependencies]
hexf = "0.2"
libm = { version = "0.2.6" }
num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
serde = { version = "1.0", optional = true }
rug = "1.26.1"

[target.'cfg(all(windows, target_env = "gnu"))'.dependencies]
libm = "0.2.6"

[dev-dependencies]
rand = "0.8"
serde_test = "1.0"
